@@ -1,7 +1,8 @@
 *** Changelog ***
 
 = 7.4.1 - 2023-xx-xx =
-* Fix - Add Order Key Validation
+* Fix - Add Order Key Validation.
+* Fix - Add sanitization and escaping some outputs.
 
 = 7.4.0 - 2023-05-03 =
 * Fix - Issue processing renewals for subscriptions without parent orders.
